Learnings/kubernetes/kubernetes-ingress/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx
spec:
  selector:
    app: nginx-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: app2-httpd
spec:
  selector:
    app: httpd-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
