Learnings/kubernetes/kubernetes-ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saaritdevops-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: app1-nginx
            port:
              number: 80
  - host:
    http:
      paths:
      - path: /http
        pathType: Prefix
        backend:
          service:
            name: app2-httpd
            port:
              number: 80
